# ProbKT

./: LICENSE  README.md  pyproject.toml
datasets/: README.md
generate_data/: README.md  create_labels.py  generate_data.py  generate_mnist_data.sh  parse_labels.py  parse_smiles.py  prepare_fold.py  select_clevr.py
generate_data/mnist/mnist3_prod/: create_prod_label.py
models/: count_clevr.pl  count_molecules.pl  count_objects.pl  multiply_digits.pl  range_count_clevr.pl  sum_digits.pl
robust_detection/: dpl_utils.py  engine.py  utils.py  wandb_config.py
robust_detection/baselines/: cnn_model.py  train.py
robust_detection/data_utils/: baselines_data_utils.py  detr_transforms.py  problog_data_utils.py  rcnn_data_utils.py
robust_detection/models/: backbone.py  detr.py  fine_tune_utils.py  matcher.py  position_encoding.py  rcnn.py  rcnn_utils.py  segmentation.py  transformer.py
robust_detection/notebooks/: IterationCurve.ipynb  ProcessCNN.ipynb  ProcessDETR.ipynb  ProcessRCNNResults.ipynb  ProcessResults.ipynb  mAP.ipynb
robust_detection/train/: fine_tune.py  retrain_detr.py  retrain_rcnn.py  train_detr.py  train_fine_tune.py  train_fine_tune_detr.py  train_rcnn.py  train_rcnn_hungarian.py  train_rcnn_own_backbone.py  train_rcnn_predictor_hungarian.py
